fix(NavBar): text vertical align

--- a/src/nav-bar/index.less
+++ b/src/nav-bar/index.less
@@ -2,7 +2,7 @@
 
 .van-nav-bar {
   z-index: @nav-bar-z-index;
-  line-height: 1.5;
+  line-height: @line-height-lg;
   text-align: center;
   background-color: @nav-bar-background-color;
   user-select: none;
